add per page option to transaction list request
