# service/public/help/swagger.json
@@ -310,6 +310,12 @@
                         "in": "query",
                         "description": "\u041d\u043e\u043c\u0435\u0440 \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u044b",
                         "type": "integer"
+                    },
+                  {
+                    "name": "perPage",
+                    "in": "query",
+                    "description": "\u041a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e \u043d\u0430 \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0435",
+                    "type": "integer"
                     }
                 ],
                 "responses": {
